--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
     "@hookform/resolvers": "^3.9.1",
+    "@liveblocks/client": "^2.12.2",
+    "@liveblocks/node": "^2.12.2",
+    "@liveblocks/react": "^2.12.2",
+    "@liveblocks/react-tiptap": "^2.12.2",
+    "@liveblocks/react-ui": "^2.12.2",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -40,6 +45,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tiptap/extension-character-count": "^2.10.2",
     "@tiptap/extension-code": "^2.10.2",
+    "@tiptap/extension-collaboration": "^2.10.2",
+    "@tiptap/extension-collaboration-cursor": "^2.10.2",
     "@tiptap/extension-color": "^2.10.2",
     "@tiptap/extension-font-family": "^2.10.2",
     "@tiptap/extension-highlight": "^2.10.2",
@@ -67,6 +74,7 @@
     "convex": "^1.17.3",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.13.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
@@ -79,12 +87,15 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.7",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
+    "tsparticles-slim": "^2.12.0",
     "vaul": "^1.1.1",
+    "y-protocols": "^1.0.6",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
